--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Leo Allen",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.9.2",
+    "ejs": "^1.0.0",
     "express": "^4.10.2",
     "express-ejs-layouts": "^1.1.0"
   },
