Add nodemon so I don't have to keep restarting the server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha test/**/**",
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "author": "Leo Allen",
   "license": "ISC",
