--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.9.2",
     "ejs": "^1.0.0",
     "express": "^4.10.2",
-    "express-ejs-layouts": "^1.1.0"
+    "express-ejs-layouts": "^1.1.0",
+    "jquery": "^2.1.1",
+    "socket.io": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
